Documentation and gem file updates

--- a/App/Gemfile
+++ b/App/Gemfile
@@ -3,7 +3,7 @@ source 'https://rubygems.org'
 
 ruby '2.3.1'
 # Bundle edge Rails instead: gem 'rails', github: 'rails/rails'
-gem 'rails', ' 5.0.1' #'~> 5.0.0', '>= 5.0.0.1'
+gem 'rails', ' 5.0.1'
 # Use postgresql as the database for Active Record
 gem 'pg', '~> 0.18'
 # Use Puma as the app server
@@ -22,8 +22,6 @@ gem 'jbuilder', '~> 2.5'
 
 gem 'rails_12factor'
 gem 'rack-cors', :require => 'rack/cors'
-#gem 'delayed_job_active_record'
-#gem 'delayed_job_web'
 gem 'grape'
 gem 'grape-swagger'
 gem 'grape-swagger-entity'
@@ -61,8 +59,6 @@ group :development, :test do
   # Call 'byebug' anywhere in the code to stop execution and get a debugger console
   gem 'byebug', platform: :mri
   gem 'rspec-rails'
-
-
   gem 'listen' #, '~> 3.0.5'
 end
 
