--- a/App/package.json
+++ b/App/package.json
@@ -8,6 +8,7 @@
     "npm":"4.0.2"
   },
   "scripts": {
+    "start":"cd client && npm start",
     "test": "echo \"Error: no test specified\" && exit 1 ",
     "heroku-postbuild": "cd client && npm install"
   },
